# hateful-memes-multimodal

./: .gitignore  LICENSE  README.md  environment.yml  hpc.md  main.ipynb  main.py  new.ipynb  pyproject.toml  sbatch_job.sh  test-mmbt.ipynb  test-seg.ipynb  utils.py
Dataset/: HatefulMemeDataset.py
Models/: BERT.py  Encoder.py  GAT.py  GCN.py  GraphFusion.py  HeteroGNN.py  LanguageAndVisionConcat.py  SAGE.py  __init__.py
Trainers/: BaseTrainer.py  MMGATTrainer.py  MMGNNTrainer.py  MMSAGETrainer.py  __init__.py
benchmarks/GCN/: nvidia-smi-a100.csv  nvidia-smi-rtx8000.csv
benchmarks/performance-hpc/: gpu_utils.py  hpml-1xRTX8000.out  hpml-1xV100.out  hpml-4xRTX8000.out  hpml-test.out  main.py  run-MultiGPUV100.sbatch  run-SingleGPU.sbatch  run-SingleGPUV100.sbatch  run-test.sbatch
logs/: gmae_cc_32699849.out
notebooks/: Baseline-CASS-384.ipynb  Baseline-DINO-384-vit.ipynb  Multimodal_finetunning-CASS-V2-CASS-loss-multi-para-optim-100-BEST-nodp-aggressive-down-1.ipynb
sbatch/: sbatch_job.sh  sbatch_multigpu_job.sh
ssl_gnn_multimodal/: config.py  main.py  test.py  utils.py
ssl_gnn_multimodal/Dataset/: ConceptualCaptionDataset.py  HatefulMemeDataset.py  __init__.py  fetch-conceptual-caption-data.py  preprocess.py
ssl_gnn_multimodal/Models/: DeepVGAE.py  GAT.py  GMAE.py  GraphClassifier.py  HeteroGNN.py  MLP.py
ssl_gnn_multimodal/Trainers/: BaseTrainer.py  ClassifierTrainer.py  GMAETrainer.py  MMGATTrainer.py  MMGNNTrainer.py  MMSAGETrainer.py  SuperGATTrainer.py  VGAETrainer.py  __init__.py
ssl_gnn_multimodal/helpers/: utils.py
(+7 files in other folders)
